--- a/model.ipynb
+++ b/model.ipynb
@@ -40,10 +40,32 @@
    "id": "18d5f336",
    "metadata": {},
    "source": [
-    "## Business value of the Model\n",
-    "**Improvmed targeting** By focusing campings on high probability buyers\n",
-    "**Cost saving** Reduces waste in marketing spend by avoiding promotions to unlikely buyers.\n",
-    "**Campaing testing**make simulate for marketing to  make sure the camaping reach for all people\n"
+    "## Business value of the Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "b5a0bcb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------+----------------------------------------------------+------------------------------------------------------------------------------------------------------------+\n",
+      "|           Improvemed targeting           |                    Cost saving                     |                                              Campaign testing                                              |\n",
+      "+------------------------------------------+----------------------------------------------------+------------------------------------------------------------------------------------------------------------+\n",
+      "| By focsing on high probability of buyers | Reduce sepnd on marketing by avoiding wrong people | make simulate before running the campaign to make sure that the campaign will be reach the target audience |\n",
+      "+------------------------------------------+----------------------------------------------------+------------------------------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "businesstable = PrettyTable()\n",
+    "businesstable.field_names = [\"Improvemed targeting\",\"Cost saving\",\"Campaign testing\"]\n",
+    "businesstable.add_row([\"By focsing on high probability of buyers\",\"Reduce sepnd on marketing by avoiding wrong people\",\"make simulate before running the campaign to make sure that the campaign will be reach the target audience\"])\n",
+    "print(businesstable)"
    ]
   },
   {
@@ -2774,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "5d037f34",
    "metadata": {},
    "outputs": [],
@@ -2791,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "8a1d157d",
    "metadata": {},
    "outputs": [
@@ -2961,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "6ef6ee3d",
    "metadata": {},
    "outputs": [
@@ -3020,7 +3042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "0885d60d",
    "metadata": {},
    "outputs": [
