--- a/model.ipynb
+++ b/model.ipynb
@@ -1,22 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e20cafd0",
+   "cell_type": "markdown",
+   "id": "f7150f21",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from prettytable import PrettyTable\n",
-    "table = PrettyTable()\n",
-    "table.field_names = [\"check null value\", \"dubilcated values\", \"outliers\",\"Skewness\",\"encoding\",\"normalization\"]\n",
-    "table.add_row([\"I have not null values\", \"I have not dubilcated values\",\"check with Percentile and solve with median \", \"use log with positive values, I used boxcox with large positive skewness and  yeo-johnson with negative skewness\",\"I use target encoding with article columns because of alot of values and the other columns  I used LabelEncoder and save original data\",\"I used MinMaxScaler\"])"
+    "## Meeting Structure & Business Understanding\n",
+    "\n",
+    "- **Purpose**: Use data analytics to improve targeting and increase sales.\n",
+    "- **Agenda**: Intro → Problem understanding → Insights → ML Model → Business value → Q&A → Next steps.\n",
+    "- **Business Context**: Sports Wear Group is digitally transforming and wants to enhance marketing ROI.\n",
+    "- **Problem**: High volume of non-converting customers = wasted campaign spend.\n",
+    "- **Solution Value**:\n",
+    "  - Smarter targeting → Better conversions.\n",
+    "  - Lower spend → Higher Return of investement.\n",
+    "  - Simulations → Data-driven decisions.\n",
+    "- **Objections Handling**:\n",
+    "  - Complement current tools.\n",
+    "  - Transparent metrics to show value.\n",
+    "  - Quick wins to prove impact.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42f6d7a4",
+   "metadata": {},
+   "source": [
+    "# summary of preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "0b68150b",
+   "execution_count": 1,
+   "id": "353e9ee8",
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +48,10 @@
     }
    ],
    "source": [
+    "from prettytable import PrettyTable\n",
+    "table = PrettyTable()\n",
+    "table.field_names = [\"check null value\", \"dubilcated values\", \"outliers\",\"Skewness\",\"encoding\",\"normalization\"]\n",
+    "table.add_row([\"I have not null values\", \"I have not dubilcated values\",\"check with Percentile and solve with median \", \"use log with positive values, I used boxcox with large positive skewness and  yeo-johnson with negative skewness\",\"I use target encoding with article columns because of alot of values and the other columns  I used LabelEncoder and save original data\",\"I used MinMaxScaler\"])\n",
     "print(table)"
    ]
   },
@@ -2959,7 +2979,7 @@
     "        roc_auc = roc_auc_score(y_test, y_proba)\n",
     "        print(f\"ROC-AUC for {name}: {roc_auc:.2f}\")\n",
     "        \n",
-    "        # Plot ROC Curve I need to know it because I have High imbalance data \n",
+    "        # Plot ROC Curve I need to know it because I have High imbalance data because I have 0.9% of 1 and 99.1% of 0 and accuracy \n",
     "        fpr, tpr, _ = roc_curve(y_test, y_proba)\n",
     "        plt.plot(fpr, tpr, label=f\"{name} (AUC = {roc_auc:.2f})\")\n",
     "    else:\n",
