--- a/model.ipynb
+++ b/model.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "353e9ee8",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
     "from prettytable import PrettyTable\n",
     "table = PrettyTable()\n",
     "table.field_names = [\"check null value\", \"dubilcated values\", \"outliers\",\"Skewness\",\"encoding\",\"normalization\"]\n",
-    "table.add_row([\"I have not null values\", \"I have not dubilcated values\",\"check with Percentile and solve with median \", \"use log with positive values, I used boxcox with large positive skewness and  yeo-johnson with negative skewness\",\"I use target encoding with article columns because of alot of values and the other columns  I used LabelEncoder and save original data\",\"I used MinMaxScaler\"])\n",
+    "table.add_row([\"I have not null values\", \"I have not dubilcated values\",\"check with Percentile and solve with median because of outliers \", \"use log with positive values, I used boxcox with large positive skewness and  yeo-johnson with negative skewness\",\"I use target encoding with article columns because of alot of values and the other columns  I used LabelEncoder and save original data\",\"I used MinMaxScaler\"])\n",
     "print(table)"
    ]
   },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "b5a0bcb2",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
    ],
    "source": [
     "businesstable = PrettyTable()\n",
-    "businesstable.field_names = [\"Improvemed targeting\",\"Cost saving\",\"Campaign testing\"]\n",
+    "businesstable.field_names = [\"Improved targeting\",\"Cost saving\",\"Campaign testing\"]\n",
     "businesstable.add_row([\"By focsing on high probability of buyers\",\"Reduce sepnd on marketing by avoiding wrong people\",\"make simulate before running the campaign to make sure that the campaign will be reach the target audience\"])\n",
     "print(businesstable)"
    ]
