--- a/model.ipynb
+++ b/model.ipynb
@@ -3120,6 +3120,17 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d2e9e48",
+   "metadata": {},
+   "source": [
+    "# Next Step\n",
+    "1- fine tunning model parameters\n",
+    "2-test he model on the real campaign\n",
+    "3-if results are satisfactory, we can deploy it "
+   ]
   }
  ],
  "metadata": {
