--- a/approch2.ipynb
+++ b/approch2.ipynb
@@ -148,6 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "14a106dc",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +397,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\youss\\AppData\\Local\\Temp\\ipykernel_20132\\697980632.py:3: FutureWarning: \n",
+      "C:\\Users\\youss\\AppData\\Local\\Temp\\ipykernel_9972\\697980632.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -2498,70 +2499,10 @@
     "        ('model', LogisticRegression(class_weight=\"balanced\", max_iter=1000))\n",
     "    ]),\n",
     "    \"LightBoosting\": Pipeline([\n",
-    "        ('scaler', StandardScaler()),  # ممكن تستغنى عنه لو البيانات متوازنة كويس\n",
+    "        ('scaler', StandardScaler()),  \n",
     "        ('model', lgb.LGBMClassifier())\n",
     "    ])\n",
     "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "8a1d157d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\"\\ntrained_models = {}\\nfor name, model in models.items():\\n    print(f\"Training model: {name}\")\\n    model.fit(X_train, y_train)  \\n    trained_models[name] = model\\n    train_score = model.score(X_train, y_train)\\n    test_score = model.score(X_test, y_test)\\n    print(f\"Train Score for {name}: {train_score}\")\\n    print(f\"Test Score for {name}: {test_score}\")\\n\\nfor name, model in trained_models.items():\\n    print(f\"Evaluating {name}\")\\n    \\n    y_pred = model.predict(X_test)\\n    y_proba = model.predict_proba(X_test)[:, 1] if hasattr(model, \"predict_proba\") else None\\n    \\n    print(f\"Classification Report for {name}:\")\\n    print(classification_report(y_test, y_pred))\\n    \\n    print(f\"Confusion Matrix for {name}:\")\\n    print(confusion_matrix(y_test, y_pred))\\n    \\n    if y_proba is not None:\\n        roc_auc = roc_auc_score(y_test, y_proba)\\n        print(f\"ROC-AUC for {name}: {roc_auc:.2f}\")\\n        \\n        # Plot ROC Curve I need to know it because I have High imbalance data because I have 0.9% of 1 and 99.1% of 0 and accuracy \\n        fpr, tpr, _ = roc_curve(y_test, y_proba)\\n        plt.plot(fpr, tpr, label=f\"{name} (AUC = {roc_auc:.2f})\")\\n    else:\\n        print(f\"{name} does not support probability estimates. Skipping ROC-AUC.\")\\n\\nplt.plot([0, 1], [0, 1], \\'k--\\')  \\nplt.xlabel(\\'False Positive Rate\\')\\nplt.ylabel(\\'True Positive Rate\\')\\nplt.title(\\'ROC Curve\\')\\nplt.legend()\\nplt.show()\\n'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\"\n",
-    "trained_models = {}\n",
-    "for name, model in models.items():\n",
-    "    print(f\"Training model: {name}\")\n",
-    "    model.fit(X_train, y_train)  \n",
-    "    trained_models[name] = model\n",
-    "    train_score = model.score(X_train, y_train)\n",
-    "    test_score = model.score(X_test, y_test)\n",
-    "    print(f\"Train Score for {name}: {train_score}\")\n",
-    "    print(f\"Test Score for {name}: {test_score}\")\n",
-    "\n",
-    "for name, model in trained_models.items():\n",
-    "    print(f\"Evaluating {name}\")\n",
-    "    \n",
-    "    y_pred = model.predict(X_test)\n",
-    "    y_proba = model.predict_proba(X_test)[:, 1] if hasattr(model, \"predict_proba\") else None\n",
-    "    \n",
-    "    print(f\"Classification Report for {name}:\")\n",
-    "    print(classification_report(y_test, y_pred))\n",
-    "    \n",
-    "    print(f\"Confusion Matrix for {name}:\")\n",
-    "    print(confusion_matrix(y_test, y_pred))\n",
-    "    \n",
-    "    if y_proba is not None:\n",
-    "        roc_auc = roc_auc_score(y_test, y_proba)\n",
-    "        print(f\"ROC-AUC for {name}: {roc_auc:.2f}\")\n",
-    "        \n",
-    "        # Plot ROC Curve I need to know it because I have High imbalance data because I have 0.9% of 1 and 99.1% of 0 and accuracy \n",
-    "        fpr, tpr, _ = roc_curve(y_test, y_proba)\n",
-    "        plt.plot(fpr, tpr, label=f\"{name} (AUC = {roc_auc:.2f})\")\n",
-    "    else:\n",
-    "        print(f\"{name} does not support probability estimates. Skipping ROC-AUC.\")\n",
-    "\n",
-    "plt.plot([0, 1], [0, 1], 'k--')  \n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.title('ROC Curve')\n",
-    "plt.legend()\n",
-    "plt.show()\n",
-    "\"\"\""
    ]
   },
   {
@@ -2583,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "11be1e88",
    "metadata": {},
    "outputs": [
@@ -2593,14 +2534,14 @@
      "text": [
       "Cross-Validation ROC-AUC Scores: [0.84295513 0.83992472 0.84912059 0.84684467 0.8457118 ]\n",
       "XGBClassifier: Mean accuracy = 0.8449, Std = 0.0032\n",
-      "Cross-Validation ROC-AUC Scores: [0.83531263 0.83396308 0.83905359 0.83763274 0.83910721]\n",
-      "RandomForestClassifier: Mean accuracy = 0.8370, Std = 0.0021\n",
-      "Cross-Validation ROC-AUC Scores: [0.59979359 0.60602766 0.59939359 0.60271573 0.60832284]\n",
-      "DecisionTreeClassifier: Mean accuracy = 0.6033, Std = 0.0035\n",
+      "Cross-Validation ROC-AUC Scores: [0.83665348 0.83480331 0.84148216 0.83742531 0.83976225]\n",
+      "RandomForestClassifier: Mean accuracy = 0.8380, Std = 0.0023\n",
+      "Cross-Validation ROC-AUC Scores: [0.60001058 0.60843157 0.6016622  0.59899798 0.60851783]\n",
+      "DecisionTreeClassifier: Mean accuracy = 0.6035, Std = 0.0041\n",
       "Cross-Validation ROC-AUC Scores: [0.85787201 0.85578559 0.86263242 0.86103849 0.85925893]\n",
       "LogisticRegression: Mean accuracy = 0.8593, Std = 0.0024\n",
       "[LightGBM] [Info] Number of positive: 11117, number of negative: 68883\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001494 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001715 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1542\n",
@@ -2608,7 +2549,7 @@
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.138962 -> initscore=-1.823934\n",
       "[LightGBM] [Info] Start training from score -1.823934\n",
       "[LightGBM] [Info] Number of positive: 11056, number of negative: 68944\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002069 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002161 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1541\n",
@@ -2616,7 +2557,7 @@
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.138200 -> initscore=-1.830321\n",
       "[LightGBM] [Info] Start training from score -1.830321\n",
       "[LightGBM] [Info] Number of positive: 11183, number of negative: 68817\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000925 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001006 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1541\n",
@@ -2624,7 +2565,7 @@
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.139788 -> initscore=-1.817056\n",
       "[LightGBM] [Info] Start training from score -1.817056\n",
       "[LightGBM] [Info] Number of positive: 11152, number of negative: 68848\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002208 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002096 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1541\n",
@@ -2632,7 +2573,7 @@
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.139400 -> initscore=-1.820282\n",
       "[LightGBM] [Info] Start training from score -1.820282\n",
       "[LightGBM] [Info] Number of positive: 11204, number of negative: 68796\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001126 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001009 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1542\n",
@@ -2655,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "df00489a",
    "metadata": {},
    "outputs": [
@@ -2671,6 +2612,77 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:320: UserWarning: The total space of parameters 8 is smaller than n_iter=10. Running 8 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:540: FitFailedWarning: \n",
+      "1 fits failed out of a total of 40.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "1 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\pipeline.py\", line 473, in fit\n",
+      "    self._final_estimator.fit(Xt, y, **last_step_params[\"fit\"])\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 726, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1512, in fit\n",
+      "    train_dmatrix, evals = _wrap_evaluation_matrices(\n",
+      "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\sklearn.py\", line 596, in _wrap_evaluation_matrices\n",
+      "    train_dmatrix = create_dmatrix(\n",
+      "                    ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1003, in _create_dmatrix\n",
+      "    return QuantileDMatrix(\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 726, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 1573, in __init__\n",
+      "    self._init(\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 1632, in _init\n",
+      "    it.reraise()\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 569, in reraise\n",
+      "    raise exc  # pylint: disable=raising-bad-type\n",
+      "    ^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 550, in _handle_exception\n",
+      "    return fn()\n",
+      "           ^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 637, in <lambda>\n",
+      "    return self._handle_exception(lambda: self.next(input_data), 0)\n",
+      "                                          ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\data.py\", line 1416, in next\n",
+      "    input_data(**self.kwargs)\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 726, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 626, in input_data\n",
+      "    self.proxy.set_info(\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 726, in inner_f\n",
+      "    return func(**kwargs)\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 954, in set_info\n",
+      "    self.set_label(label)\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 1092, in set_label\n",
+      "    dispatch_meta_backend(self, label, \"label\", \"float\")\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\data.py\", line 1362, in dispatch_meta_backend\n",
+      "    _meta_from_pandas_series(data, name, dtype, handle)\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\data.py\", line 679, in _meta_from_pandas_series\n",
+      "    _meta_from_numpy(data, name, dtype, handle)\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\data.py\", line 1295, in _meta_from_numpy\n",
+      "    _check_call(_LIB.XGDMatrixSetInfoFromInterface(handle, c_str(field), interface_str))\n",
+      "  File \"c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\xgboost\\core.py\", line 284, in _check_call\n",
+      "    raise XGBoostError(py_str(_LIB.XGBGetLastError()))\n",
+      "xgboost.core.XGBoostError: [13:48:07] C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0015a694724fa8361-1\\xgboost\\xgboost-ci-windows\\src\\data\\array_interface.cu:44: Check failed: err == cudaGetLastError() (0 vs. 46) : \n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "c:\\Users\\youss\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1102: UserWarning: One or more of the test scores are non-finite: [0.86072 0.86072     nan 0.86072 0.86094 0.86045 0.86038 0.85929]\n",
       "  warnings.warn(\n"
      ]
     },
@@ -2722,8 +2734,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Best score for RandomForestClassifier: 0.8569\n",
-      "🔧 Best params: {'model__n_estimators': 200, 'model__max_depth': None}\n",
+      "✅ Best score for RandomForestClassifier: 0.8567\n",
+      "🔧 Best params: {'model__n_estimators': 100, 'model__max_depth': None}\n",
       "\n",
       "Classification Report for RandomForestClassifier:\n",
       "              precision    recall  f1-score   support\n",
@@ -2766,7 +2778,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Best score for DecisionTreeClassifier: 0.8101\n",
+      "✅ Best score for DecisionTreeClassifier: 0.8113\n",
       "🔧 Best params: {'model__min_samples_split': 2, 'model__max_depth': None}\n",
       "\n",
       "Classification Report for DecisionTreeClassifier:\n",
@@ -2855,7 +2867,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 13928, number of negative: 86072\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002563 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.003229 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1541\n",
@@ -2945,6 +2957,81 @@
     "    plt.title(f'ROC Curve - {name}')\n",
     "    plt.legend(loc='lower right')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "53760fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation ROC-AUC Scores: [0.85787294 0.85578919 0.86263324 0.8610335  0.85925802]\n",
+      "Mean AUC: 0.8593, Std: 0.0024\n"
+     ]
+    }
+   ],
+   "source": [
+    "lg_pipelines = Pipeline([\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('model', LogisticRegression(class_weight=\"balanced\", C=0.1))\n",
+    "])\n",
+    "kfold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "scores = cross_val_score(lg_pipelines, X, target, cv=kfold, scoring='roc_auc')\n",
+    "\n",
+    "print(\"Cross-Validation ROC-AUC Scores:\", scores)\n",
+    "print(f\"Mean AUC: {np.mean(scores):.4f}, Std: {np.std(scores):.4f}\")\n",
+    "\n",
+    "lg_pipelines.fit(X, target)\n",
+    "y_pred = lg_pipelines.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9049fe57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['logistic_model.pkl']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(lg_pipelines, \"logistic_model.pkl\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a1e2a4a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_features.pkl']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(X.columns.tolist(), \"model_features.pkl\")\n"
    ]
   },
   {
